--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "proxy": "http://localhost:4050",
+  "proxy": "https://reaktor-drone-fullstack.onrender.com/express_backend",
   "keywords": [],
   "author": "",
   "license": "ISC",
